<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fusion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="import_csv">Import CSV</string>
    <string name="open">Open File</string>
    <string name="load">Load File</string>
    <string name="clear">Clear Data</string>
    <string name="cat1">Fusion Material 1</string>
    <string name="cat2">Fusion material 2</string>
    <string name="generate">Regenerate Edges</string>
    <string name="result">Fusion Result</string>
    <string name="getResult">Get Fusion Result</string>
    <string name="cat">Fusion Material</string>
    <string name="targetCat">Target Fusion Material</string>
    <string name="targetResult">Target Fusion Result</string>
    <string name="shortest">Path Finder</string>
    <string name="targetPath">Target Path</string>
    <string name="altPath">Get Path</string>
    <string name="title_activity_fusion">Fusion</string>
    <string name="title_activity_path">Fusion Path Finder</string>
    <string name="clearPath">Clear Target Path</string>
    <string name="clearAltPath">Clear Path</string>
    <string name="title_activity_list">ListActivity</string>

</resources>
