<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:id="@+id/openFileButton"
                android:layout_weight="1"
                android:textSize="@dimen/button_large_text"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:id="@+id/loadFileButton"
                android:layout_weight="1"
                android:textSize="@dimen/button_large_text"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:id="@+id/listButton"
                android:layout_weight="1"
                android:textSize="@dimen/button_large_text"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:id="@+id/fusionButton"
                android:layout_weight="1"
                android:textSize="@dimen/button_large_text"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shortest"
                android:id="@+id/pathButton"
                android:layout_weight="1"
                android:textSize="@dimen/button_large_text"
                android:layout_margin="5dp"/>
    </LinearLayout>
</ScrollView>
