<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.path.fusion.fusion.Activity.PathActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text"
                    android:text="@string/targetCat"
                    android:id="@+id/categoryTextView"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/categorySpinner" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text"
                    android:text="@string/targetResult"
                    android:id="@+id/resultTextView" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultSpinner" />

                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text"
                    android:text="@string/cat"
                    android:id="@+id/categoryTextView2"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/categorySpinner2" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text"
                    android:text="@string/result"
                    android:id="@+id/resultTextView2"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultSpinner2"/>

                </LinearLayout>


            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/targetPath"
                android:id="@+id/pathButton"
                android:layout_weight="1"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/altPath"
                android:id="@+id/altPathButton"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/clearPath"
                android:id="@+id/clearPathButton"
                android:layout_weight="1"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/clearAltPath"
                android:id="@+id/clearAltPathButton"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/textView"
                android:layout_marginTop="@dimen/custom_margin"
                android:textSize="@dimen/normal_text"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:minHeight="@dimen/min_text_space"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/altTextView"
                android:layout_marginTop="@dimen/custom_margin"
                android:textSize="@dimen/normal_text"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:minHeight="@dimen/min_text_space"/>
            </LinearLayout>
    </LinearLayout>
</ScrollView>
